[package]
name = "onion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
fake = { version = "2.6.1", features = ["derive", "time"] }
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
mockall = "0.11.4"
mockall_double = "0.3.0"
